--- a/app/src/main/res/layout/activity_general_calculator.xml
+++ b/app/src/main/res/layout/activity_general_calculator.xml
@@ -125,7 +125,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="X"
+            android:text="*"
             app:layout_constraintStart_toEndOf="@id/Btn9"
             app:layout_constraintTop_toBottomOf="@id/SubBtn"
             android:layout_marginLeft="8dp"
