--- a/app/src/main/res/layout/activity_general_calculator.xml
+++ b/app/src/main/res/layout/activity_general_calculator.xml
@@ -18,141 +18,155 @@
         />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
-        app:layout_constraintTop_toBottomOf="@+id/Result"
         android:padding="16dp"
 
-        >
+        app:layout_constraintTop_toBottomOf="@+id/Result">
+
         <Button
+            android:id="@+id/Btn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/Btn1"
             android:text="1"
 
 
             />
+
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/Btn2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
             android:text="2"
-            app:layout_constraintStart_toEndOf="@+id/Btn1"
-            android:layout_marginLeft="8dp"
-            />
+            app:layout_constraintStart_toEndOf="@+id/Btn1" />
+
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/Btn3"
-            android:text="3"
-            app:layout_constraintStart_toEndOf="@+id/Btn2"
-            android:layout_marginLeft="8dp"
-            />
-        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:text="3"
+            app:layout_constraintStart_toEndOf="@+id/Btn2" />
+
+        <Button
             android:id="@+id/Btn4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="4"
             app:layout_constraintStart_toStartOf="@+id/Btn1"
             app:layout_constraintTop_toBottomOf="@id/Btn1"
 
             />
+
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/Btn5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
             android:text="5"
-            app:layout_constraintStart_toEndOf="@+id/Btn4"
             app:layout_constraintBottom_toBottomOf="@id/Btn4"
-            android:layout_marginLeft="8dp"
-            />
+            app:layout_constraintStart_toEndOf="@+id/Btn4" />
+
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/Btn6"
-            android:text="6"
-            app:layout_constraintStart_toEndOf="@+id/Btn5"
-            app:layout_constraintBottom_toBottomOf="@id/Btn5"
-            android:layout_marginLeft="8dp"
-            />
-        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:text="6"
+            app:layout_constraintBottom_toBottomOf="@id/Btn5"
+            app:layout_constraintStart_toEndOf="@+id/Btn5" />
+
+        <Button
             android:id="@+id/Btn7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="7"
             app:layout_constraintStart_toStartOf="@+id/Btn4"
             app:layout_constraintTop_toBottomOf="@id/Btn4"
 
             />
+
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/Btn8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
             android:text="8"
-            app:layout_constraintStart_toEndOf="@+id/Btn7"
             app:layout_constraintBottom_toBottomOf="@id/Btn7"
-            android:layout_marginLeft="8dp"
-            />
+            app:layout_constraintStart_toEndOf="@+id/Btn7" />
+
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/Btn9"
-            android:text="9"
-            app:layout_constraintStart_toEndOf="@+id/Btn8"
-            app:layout_constraintBottom_toBottomOf="@id/Btn8"
-            android:layout_marginLeft="8dp"
-            />
-        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="+"
-            app:layout_constraintStart_toEndOf="@id/Btn3"
+            android:layout_marginLeft="8dp"
+            android:text="9"
+            app:layout_constraintBottom_toBottomOf="@id/Btn8"
+            app:layout_constraintStart_toEndOf="@+id/Btn8" />
+
+        <Button
+            android:id="@+id/AddBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:backgroundTint="@color/black"
-            android:id="@+id/AddBtn"
-            />
+            android:text="+"
+            app:layout_constraintStart_toEndOf="@id/Btn3" />
+
         <Button
+            android:id="@+id/SubBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:backgroundTint="@color/black"
             android:text="-"
             app:layout_constraintStart_toEndOf="@id/Btn6"
-            app:layout_constraintTop_toBottomOf="@id/AddBtn"
-            android:layout_marginLeft="8dp"
-            android:backgroundTint="@color/black"
-            android:id="@+id/SubBtn"
-            />
+            app:layout_constraintTop_toBottomOf="@id/AddBtn" />
+
         <Button
+            android:id="@+id/MulBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="*"
-            app:layout_constraintStart_toEndOf="@id/Btn9"
-            app:layout_constraintTop_toBottomOf="@id/SubBtn"
             android:layout_marginLeft="8dp"
             android:backgroundTint="@color/black"
-            android:id="@+id/MulBtn"
-            />
+            android:text="*"
+            app:layout_constraintStart_toEndOf="@id/Btn9"
+            app:layout_constraintTop_toBottomOf="@id/SubBtn" />
 
         <Button
             android:id="@+id/ResultGO"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="="
-            app:layout_constraintTop_toBottomOf="@+id/Btn8"
             app:layout_constraintStart_toStartOf="@id/Btn8"
+            app:layout_constraintTop_toBottomOf="@+id/Btn8"
 
             />
+
         <Button
             android:id="@+id/BtnClear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="cLEAR"
-            app:layout_constraintTop_toBottomOf="@+id/Btn9"
             app:layout_constraintStart_toStartOf="@id/Btn9"
+            app:layout_constraintTop_toBottomOf="@+id/Btn9"
 
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="160dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="LogOut"
+        android:id="@+id/logout"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
